# learn-rust-as-typescript-dev

./: Cargo.toml  README.md
Section 01 - Basic Syntax and Data Types/: README.md  section1.rs
Section 01 - Variables, Data Types and Borrowing/: README.md  section1.rs
Section 02 - Control Structures/: README.md  section2.rs
Section 03 - Functions/: README.md  section3.rs
Section 04 - Enums and Pattern Matching/: README.md  section4.rs
Section 05 - Error Handling/: README.md  section5.rs
Section 06 - Structs and Methods/: README.md  section6.rs
Section 07 - Traits and Generics/: README.md  section7.rs
Section 08 - Modules and Packages/: README.md  section8.rs
Section 09 - Concurrency/: README.md  section9.rs
Section 10 - Web Development Packages in Rust and TypeScript/: README.md  section10.rs
Solutions/: section1_solutions.rs  section2_solutions.rs  section3_solutions.rs  section4_solutions.rs  section5_solutions.rs  section6_solutions.rs  section7_solutions.rs  section8_solutions.rs  section9_solutions.rs
